validation - добавлена валидация сохраняемых/обновляемых сущностей